<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Ninjadin</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="new_filename">tmp_char</string>
    <string name="new_char">New</string>
    <string name="open_char">Open</string>
    <string name="inventory">Inventory</string>
    <string name="title_activity_char_fragments_list">Character Generation</string>
    <string name="title_activity_inventory"></string>
    <string name="char_info">Character Information</string>
    <string name="char_stats">Stats</string>
    <string name="char_levels">Character Levels</string>
    <string name="class_levels">Class Levels</string>
    <string name="char_skills">Skills</string>
    <string name="char_equip">Equipment</string>
    <string name="char_spells">Spells</string>
    <string name="char_pet">Pet</string>
    <string name="info_name">Character Name:</string>
    <string name="info_alignment">Alignment:</string>
    <string-array name="alignments_list">
        <item>Lawful Good</item>
        <item>Lawful Neutral</item>
        <item>Lawful Evil</item>
        <item>Neutral Good</item>
        <item>True Neutral</item>
        <item>Neutral Evil</item>
        <item>Chaotic Good</item>
        <item>Chaotic Neutral</item>
        <item>Chaotic Evil</item>
    </string-array>
    <string name="info_male">Male</string>
    <string name="info_female">Female</string>
    <string name="info_andro">Androgynous</string>
    <string name="info_deity">Deity</string>
    <string name="points">Points Remaining:</string>
    <string name="strength">Str</string>
    <string name="dexterity">Dex</string>
    <string name="constitution">Con</string>
    <string name="intelligence">Int</string>
    <string name="wisdom">Wis</string>
    <string name="charisma">Cha</string>
    

</resources>