<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginLoadActivity"
	android:orientation="vertical">

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <EditText
	        android:id="@+id/char_filename"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/new_filename"
	        android:hint="@string/new_filename" >
	        
	        <requestFocus android:layout_width="wrap_content" />
	    </EditText>
	    
	    <Button
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/new_char" 
	        android:onClick="newChar" />
	</LinearLayout>
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
		<Spinner
	        android:id="@+id/chars_spinner"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" />
	
	    <Button
	        android:id="@+id/button2"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/open_char" 
	        android:onClick="openChar" />
	</LinearLayout>
    <Button 
        android:id="@+id/button3"
        android:layout_width="300sp"
        android:layout_height="wrap_content"
        android:text="@string/inventory"
        android:onClick="openInventory" />
    
</LinearLayout>