<?xml version="1.0" encoding="utf-8"?>
<ScrollView 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text=""
            android:textSize="30sp" />
        
        <TextView
            android:id="@+id/stats_remain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/points"
            android:text="@string/points"
            android:textSize="30sp" />
                
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/points"
            android:textSize="40sp"
            android:text="@string/strength"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/str_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/points"
            android:layout_toRightOf="@+id/textView7"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="-" />

        <TextView
            android:id="@+id/num_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/points"
            android:layout_toRightOf="@+id/str_minus"
            android:textSize="40sp"
            android:text=""
            android:minWidth="50sp"
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/str_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/points"
            android:layout_toRightOf="@+id/num_str"
            android:minWidth="40sp"
            android:text="+" 
            android:onClick="statChange"/>

        <TextView
            android:id="@+id/str_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/points"
            android:layout_toRightOf="@+id/str_plus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView1"
            android:textSize="40sp"
            android:text="@string/dexterity"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/dex_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/textView7"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="-" />

        <TextView
            android:id="@+id/num_dex"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/dex_minus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/dex_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/num_str"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="+" />

        <TextView
            android:id="@+id/dex_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView1"
            android:layout_toRightOf="@+id/dex_plus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
         
        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView4"
            android:textSize="40sp"
            android:text="@string/constitution"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/con_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_toRightOf="@+id/textView7"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="-" />

        <TextView
            android:id="@+id/num_con"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_toRightOf="@+id/con_minus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/con_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_toRightOf="@+id/num_str"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="+" />

        <TextView
            android:id="@+id/con_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView4"
            android:layout_toRightOf="@+id/con_plus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView7"
            android:textSize="40sp"
            android:text="@string/intelligence"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/int_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_toRightOf="@+id/textView7"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="-" />

        <TextView
            android:id="@+id/num_int"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_toRightOf="@+id/dex_minus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/int_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_toRightOf="@+id/num_str"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="+" />

        <TextView
            android:id="@+id/int_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView7"
            android:layout_toRightOf="@+id/dex_plus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <TextView
            android:id="@+id/textView13"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView10"
            android:textSize="40sp"
            android:text="@string/wisdom"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/wis_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_toRightOf="@+id/textView7"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="-" />

        <TextView
            android:id="@+id/num_wis"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_toRightOf="@+id/dex_minus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/wis_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_toRightOf="@+id/num_str"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="+" />

        <TextView
            android:id="@+id/wis_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView10"
            android:layout_toRightOf="@+id/dex_plus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView16"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/textView13"
            android:textSize="40sp"
            android:text="@string/charisma"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/cha_minus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_toRightOf="@+id/textView7"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="-" />

        <TextView
            android:id="@+id/num_cha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_toRightOf="@+id/dex_minus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        <Button
            android:id="@+id/cha_plus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_toRightOf="@+id/num_str"
            android:minWidth="40sp"
            android:onClick="statChange"
            android:text="+" />

        <TextView
            android:id="@+id/cha_mod"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView13"
            android:layout_toRightOf="@+id/dex_plus"
            android:textSize="40sp"
            android:text=""
            android:textAppearance="?android:attr/textAppearanceLarge" />
        
        </RelativeLayout>
</ScrollView>
